# module_template

./: README.md  pyproject.toml
module_template/: __init__.py  __main__.py  main.py
