[tool.poetry]
name = "module_template"
version = "1.0.0"
description = "Python module template"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/module_template"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
